fixtures/error/renewAccessToken_noExpiration.js
module.exports = {
    statusCode: 400,
    detail: 'Token does not contain expiration time'
  };
  